--- a/validacionCondicional.html
+++ b/validacionCondicional.html
@@ -5,6 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        .hidden {
+            display:none;
+        }
+    </style>
 </head>
 
 <body>
@@ -13,7 +18,7 @@
             <input type="checkbox" id="chkDomicilio">
             <label for="chkDomicilio">Envío a domicilio</label>
         </div>
-        <div id="campoDireccion" style="display: none;">
+        <div id="campoDireccion" class="hidden">
             <label for="direccion">Dirección:</label>
             <input type="text" id="direccion" name="direccion">
         </div>
@@ -32,7 +37,12 @@
             // } else {
             //     divCampoDireccion.style.display = "none";
             // }
-            divCampoDireccion.style.display = chkDomicilio.checked ? 'block' : 'none';
+            //divCampoDireccion.style.display = chkDomicilio.checked ? 'block' : 'none';
+            if (chkDomicilio.checked) {
+                divCampoDireccion.classList.remove('hidden');
+            } else {
+                 divCampoDireccion.classList.add('hidden');
+            }
             inputDireccion.required = chkDomicilio.checked;
         });
     </script>
